--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -2,10 +2,10 @@
   <app-navbar></app-navbar>
 </header>
 
-<!-- <main class="mt-5 mb-5">
+<main class="mt-5 mb-5">
   <div class="container">
     <router-outlet />
   </div>
 </main>
 
-<footer class="bg-dark text-white text-center p-3">Copyright©2025</footer> -->
+<footer class="bg-dark text-white text-center p-3">Copyright©2025</footer>
